# ACR-QA

./: .acrqa.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_BASELINE.md  README.md  SECURITY.md  alembic.ini  codecov.yml  coverage.xml  docker-compose.yml  playwright.config.ts  pyproject.toml  railway.toml  requirements.txt  setup.cfg  sonar-project.properties  test_out.txt  test_out2.txt
.devcontainer/: devcontainer.json
.github/: RELEASE_PLACEHOLDER  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: acr-qa.yml  codeql.yml  deploy-preview.yml  deploy.yml  e2e.yml  pypi-publish.yml  self-scan.yml  sign-images.yml  snyk.yml  sonar.yml  tests.yml
ACR-QA-Book/: HOW_TO_COMPILE.txt  IEEEtranN.bst  main.tex  references.bib
ACR-QA-Book/chapters/: ch1_introduction.tex  ch2_literature.tex  ch3_system_design.tex  ch4_implementation.tex  ch5_testing.tex  ch6_conclusion.tex
ACR-QA-Book/figures/: README.txt  arch_flow_slide.puml  arch_overview.puml  arch_overview_wide.puml  arch_system_slide.puml  detection_fanin.puml  docker_stack.puml  er_diagram.puml  eval_methodology.puml  exploit_flow_slide.puml  generate_eval_figures.py  pipeline_orchestrator.puml  pipeline_stages.puml  project_structure.puml  rag_engine.puml  scan_flow.puml  test_pyramid.puml
ACR-QA-Book/frontmatter/: abstract.tex  acknowledgements.tex  cover.tex  symbols.tex
CORE/: __init__.py  __main__.py  confidence_utils.py  config_loader.py  main.py  tasks.py
CORE/adapters/: __init__.py  base.py  go_adapter.py  js_adapter.py  python_adapter.py
CORE/detection/: tool_runner.py
CORE/engines/: __init__.py  ai_code_detector.py  ai_code_diff.py  attestation.py  autofix.py  cbom_scanner.py  confidence_scorer.py  confirmed_tier.py  deep_scanner.py  (+29 more)
DATABASE/: database.py  schema.sql
FRONTEND/: __init__.py  app.py
TESTS/: __init__.py  conftest.py  test_acceptance.py  test_api.py  test_attestation.py  test_auth_register.py  test_autofix.py  test_batch1_pure_logic.py  test_batch2_engines.py  test_batch3_detectors.py  test_benchmark_p2.py  test_call_graph_endpoint.py  test_cbom_scanner.py  test_celery_tasks.py  test_chaos.py  test_code_extractor.py  test_confidence_scorer.py  test_confidence_tiering.py  test_config_quality.py  test_confirmed_tier.py  test_coverage_boost.py  test_cross_language_correlator.py  test_database_coverage.py  test_deep_coverage.py  test_deep_scanner.py  test_dependency_reachability.py  test_dogfood.py  test_eval_regression_guard.py  test_explainer.py  test_exploit_verifier.py  test_fastapi_app.py  test_finding_chat.py  test_finding_history_endpoint.py  test_flask_app.py  test_go_adapter.py  test_god_mode.py  test_iac_scan_endpoint.py  test_iac_scanner.py  test_integration_benchmarks.py  test_js_adapter.py  (+44 more)
TOOLS/: run_checks.sh
acrqa-action/: Dockerfile  README.md  action.yml  entrypoint.sh
acrqa-mcp/: __init__.py  pyproject.toml  server.py
alembic/: env.py
archive/: README.md
cloudflare-pages/: _redirects  benchmark.html  index.html
config/: prometheus.yml  rules.yml  taint_sanitizers.yml  taint_sinks.yml  taint_sources.yml  vulture_whitelist.py
dashboard/: FIGMA_MCP_RULES.md  GOD_MODE_PLAN.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: ACR-QA_Defense.odp  ACTIVE_ROADMAP.md  AGENTS.md  API_REFERENCE.md  BLOG_POST_DRAFT.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  DASHBOARD_SHOWCASE.md  DEFENSE_DECK.tex  DEFENSE_DEMO_SCRIPT.md  DEFENSE_PRESENTATION_CONTENT.md  DEFENSE_QA.md  DEFENSE_SPEAKER_SCRIPT.md  DEMO_COMMANDS.md  DEMO_VIDEO_SCRIPT.md  DISTRIBUTION_PLAN.md  EVALUATION_CHAPTER.md  EVAL_EXPANSION_PLAN.md  FIGURES_EXPLAINED.md  FUNNEL_SLIDE.html  GEMINI_IMAGE_PROMPTS.md  GOD_MODE_PLAN.md  GOD_MODE_V11_PERFECT_TEN_ALL_PERSPECTIVES.md  GOD_MODE_V3_PLAN.md  GOD_MODE_V4_PLAN.md  GOD_MODE_V7_COMPETE_PLAN.md  GOD_MODE_V8_PERFECTION_PLAN.md  GOD_MODE_V9_PERFECT_TEN_PLAN.md  GO_BIG_LLM_DETECTION_PLAN.md  HEAD_TO_HEAD_CHART.html  INSTRUCTOR_MEETING.md  LAUNCH_POSTS.md  MASTER_REMAINING_PLAN.md  MASTER_SCHEDULE.md  PERFORMANCE_BASELINE.md  PHASE_12_PLAN.md  PHASE_12_RETROSPECTIVE.md  POLICY_ENGINE.md  PRESENTATION_SCRIPT.md  PRICING_POSITIONING.md  (+22 more)
notebooks/: walkthrough.py
paper/: README.md  acrqa_thesis.tex  references.bib
schemas/: verified_finding_v1.schema.json
scratch/: fix_imports.py  refactor_prints.py
scripts/: ast_security_scanner.py  audit_eval_numbers.py  backfill_vulns.py  benchmark_models.py  build_defense_deck.py  build_eval_figures.py  build_template_deck.py  clone_eval_repos.sh  compliance_report.py  compute_metrics.py  create_fix_pr.py  cve_recall_bench.py  cybersec_eval_bench.py  dogfood.py  export_provenance.py  export_sarif.py  feedback_tuner.py  generate_compliance_report.py  generate_evidence_pack.py  generate_pr_summary.py  generate_presentation.py  generate_report.py  llm_precision_filter.py  llm_security_scanner.py  peer_rating.py  populate_grafana.py  post_gate_comment.py  post_gitlab_comments.py  post_pr_comments.py  post_pr_risk_comment.py  pr_sandbox.py  proto_llm_detection.py  realvuln_exploit_verify.py  realvuln_leaderboard.py  realvuln_miss_report.py  realvuln_reliable_recall.py  realvuln_reproducibility.py  run_ablation_study.py  run_ai_code_study.py  run_ai_triage.py  (+42 more)
video/: package-lock.json  package.json
vscode-extension/: README.md  package.json
(+525 files in other folders)
