[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acrqa"
version = "5.0.0rc1"
description = "AI-powered code review with RAG-grounded explanations, 10 static analysers, and ECDSA-signed provenance"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ahmed Mahmoud Abbas", email = "ahmedabbass871@gmail.com" }]
keywords = ["code-review", "static-analysis", "security", "SAST", "AI", "RAG"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.3.4",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.2.1",
    "celery[redis]>=5.4.0",
    "alembic>=1.13.1",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
ai = ["sentence-transformers>=2.7.0", "torch>=2.2.0"]
dev = ["pytest>=8.2.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[project.scripts]
acrqa = "CORE.main:main"

[project.urls]
Homepage = "https://github.com/ahmed-145/acr-qa"
Documentation = "https://github.com/ahmed-145/acr-qa/blob/main/docs/README.md"
Repository = "https://github.com/ahmed-145/acr-qa"
Issues = "https://github.com/ahmed-145/acr-qa/issues"
Changelog = "https://github.com/ahmed-145/acr-qa/blob/main/docs/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["CORE*", "DATABASE*", "FRONTEND*"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.md"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "TESTS/evaluation/cloned/",
    "TESTS/evaluation/fixtures/",
    "TESTS/evaluation/ai_code_samples/",
    "TESTS/evaluation/securityeval/",
    "mutants/",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C90",   # mccabe complexity
]

ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "E722",   # bare except — used intentionally for graceful degradation
    "E741",   # ambiguous variable name — false positive in context
    "N802",   # function name should be lowercase (some tests use CamelCase)
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N999",   # invalid module name — our modules are CORE/, DATABASE/ (uppercase convention)
    "B008",   # function call in default argument
    "C901",   # too complex — we'll refactor later, not block CI
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"TESTS/*" = ["E", "F841", "B", "N"]
"TESTS/samples/*" = ["E", "F", "B", "N", "UP", "C90"]
"scripts/*" = ["E501", "B", "C90"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
exclude = [
    "TESTS/",
    "TESTS/samples/",
]

[[tool.mypy.overrides]]
module = "CORE.main"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "FRONTEND.api.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "FRONTEND.auth.*"
ignore_errors = true

# Test coverage tracking
[tool.pytest.ini_options]
testpaths = ["TESTS"]
norecursedirs = ["TESTS/evaluation/cloned", "mutants", ".venv", "node_modules"]
addopts = [
    "--cov=CORE",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
    # Skip @pytest.mark.slow by default (evaluation harness runs the full
    # pipeline on real repos — minutes, not seconds). Run them explicitly
    # via `pytest -m slow` (nightly CI) or `-m "slow or not slow"` (everything).
    "-m", "not slow",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "slow: end-to-end evaluation tests that invoke the full pipeline against real repos (run nightly, skipped on PR by default)",
    "integration: tests that require live external services (Postgres, Redis, Celery worker)",
    "exploit: tests that spin up real Docker containers to verify exploit PoCs (requires Docker daemon)",
    "smoke: tests that hit a live deployed server (auto-skip when ACRQA_TEST_URL is unreachable)",
    "e2e: API-level end-to-end tests against a running FastAPI server (auto-skip when unreachable)",
    "offline: tests that require Ollama running locally (auto-skip when not installed)",
]
