[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acrqa-mcp"
version = "1.0.0"
description = "ACR-QA MCP Server — pre-PR security analysis for Claude Code, Cursor, and Continue"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
acrqa-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/ahmed-145/ACR-QA"

[tool.hatch.build.targets.wheel]
include = ["server.py", "__init__.py"]
